# nl3-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html
.github/workflows/: ci.yml
benches/: parse.rs
examples/: adventure.rs  ambiguity.rs  basic.rs  custom_tagger.rs  messenger.rs
src/: classify.rs  error.rs  lib.rs  tagger.rs  text.rs  triple.rs
src/rules/: flip.rs  mod.rs  parse.rs  processor.rs
tests/: inference.rs  messenger.rs  serde.rs
