[package]
name = "nl3-rs"
version = "1.0.3"
edition = "2024"
rust-version = "1.95"
description = "Natural language triples — parse plain-English Subject-Predicate-Object phrases into validated triples."
license = "MIT"
repository = "https://github.com/defstream/nl3-rs"
keywords = ["nlp", "triple", "rdf", "parser", "natural-language"]
categories = ["text-processing", "parser-implementations"]

[lib]
name = "nl3"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
pluralizer = "0.5.0"
regex = "1"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "parse"
harness = false
